# pytestresultsdiff

./: Cargo.toml  README.md  action.yml  pyproject.toml  resultdiff.json
.github/workflows/: build.yml  test.yml
scripts/: generate_markdown_table.py
src/: diff.rs  file.rs  main.rs
src/data/: diff.json  main.xml  memdiff.json  pr.xml  romancal_nightly_results-Linux-x64-py3.11.xml  timediff.json
src/data/peakmem/: main.xml  memdiff.json  pr.xml
src/data/time/: romancal_24Q4_B15.0.0_results-Linux-x64-py3.11.xml  romancal_nightly_results-Linux-x64-py3.11.xml  timediff.json
src/pytestresultsdiff/: diff.py
tests/: test_diff.py
tests/data/: romancal_24Q4_B15.0.0_results-Linux-x64-py3.11.xml
