[package]
name = "pytestresultsdiff"
authors = ["zacharyburnett <zburnett@stsci.edu>"]
license-file = "LICENSE"
readme = "README.md"
description = "compare properties of Pytest results"
homepage = "https://github.com/zacharyburnett/pytestresultsdiff"
repository = "https://github.com/zacharyburnett/pytestresultsdiff"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
junit-parser = { version = "1.3.1", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
