[package]
name = "pytestresultsdiff"
authors = ["zacharyburnett <zburnett@stsci.edu>"]
license-file = "LICENSE"
readme = "README.md"
description = "compare properties of Pytest results"
homepage = "https://github.com/zacharyburnett/pytestresultsdiff"
repository = "https://github.com/zacharyburnett/pytestresultsdiff"
version = "0.5.0"
edition = "2021"

[features]
default = ["extra-properties"]
# compare system-err of test results
system-err = []
# compare system-out of test results
system-out = []
# compare extra properties
extra-properties = []

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
junit-parser = { version = "1.3.1", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
url = "2.5.3"
