[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pytestresultsdiff"
dynamic = ["version"]
description = 'compare properties of Pytest results'
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "zacharyburnett", email = "zburnett@stsci.edu" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "junitparser",
  "typer",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
pytestresultsdiff = "pytestresultsdiff.diff:main"

[project.urls]
Documentation = "https://github.com/zacharyburnett/pytestresultsdiff#readme"
Issues = "https://github.com/zacharyburnett/pytestresultsdiff/issues"
Source = "https://github.com/zacharyburnett/pytestresultsdiff"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source_pkgs = ["pytestresultsdiff", "tests"]
branch = true
parallel = true
omit = [
  "src/pytestresultsdiff/__about__.py",
]

[tool.coverage.paths]
pytestresultsdiff = ["src/pytestresultsdiff", "*/pytestresultsdiff/src/pytestresultsdiff"]
tests = ["tests", "*/pytestresultsdiff/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
